# rastion

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
agent_requests/: calendar_week_off.json  calendar_week_off_30m.json  calendar_week_off_30m_baseline_only.json  calendar_week_off_30m_file_zip_fallback.json  calendar_week_off_30m_hub_pulled.json  calendar_week_off_30m_inline.json  calendar_week_off_30m_remote_solver.json  calendar_week_off_30m_zip_baseline_only.json
catalog/solvers/tsp-nearest-neighbor/: README.md  card.json
catalog/solvers/tsp-ortools/: README.md  card.json
catalog/solvers/tsp-two-opt/: README.md  card.json
catalog/suites/: tsplib-large-v1.json  tsplib-medium-v1.json  tsplib-small-v1.json
decision_plugins/calendar_week_off/: decision.yaml  metadata.yaml  problem_card.md  spec.json
decision_plugins/calendar_week_off/instances/: default.json
decision_plugins/calendar_week_off_30m/: decision.yaml  metadata.yaml  problem_card.md  spec.json
decision_plugins/calendar_week_off_30m/instances/: default.json
docs/: CREATING_PROBLEMS.md  CREATING_SOLVERS.md  add-a-tsp-solver.md  launch-announcement.md  launch-shotlist.md  publish-checklist.md  use-rastion-yourself.md
examples/: maxcut_small.json  qubo_small.json
examples/facility_location/: README.md  instance.json  spec.json
examples/knapsack/: instance.json  spec.json
examples/maxcut/: spec.json
examples/portfolio/: README.md  instance.json  spec.json
examples/set_cover/: README.md  instance.json  spec.json
examples/tsp/: README.md  instance.json  spec.json
examples/tsplib/: README.md
ileo-lab/: .gitignore  README.md
ileo-lab/scripts/: activate.sh  bootstrap.sh  lab.py
plugins_local/rastion_sa/: pyproject.toml
plugins_local/rastion_sa/rastion_sa/: __init__.py  metadata.json  solver.py
plugins_local/rastion_tabu/: pyproject.toml
plugins_local/rastion_tabu/rastion_tabu/: __init__.py  metadata.json  solver.py
plugins_local/rastion_tsp_nearest/: pyproject.toml
plugins_local/rastion_tsp_nearest/rastion_tsp_nearest/: __init__.py  metadata.json  solver.py
plugins_local/rastion_tsp_ortools/: pyproject.toml
plugins_local/rastion_tsp_ortools/rastion_tsp_ortools/: __init__.py  metadata.json  solver.py
plugins_local/rastion_tsp_two_opt/: pyproject.toml
plugins_local/rastion_tsp_two_opt/rastion_tsp_two_opt/: __init__.py  metadata.json  solver.py
rastion/: __init__.py  __main__.py  arena.py  benchmark.py  cli.py  config.py  exporters.py  version.py
rastion/agent/: __init__.py  bootstrap.py  run.py
rastion/backends/: __init__.py  base.py  local.py
rastion/catalog/: __init__.py  evals.py  exports.py  loaders.py  schema.py
rastion/cli/: __init__.py  __main__.py  main.py
rastion/compile/: __init__.py  normalize.py  qubo.py
rastion/core/: __init__.py  data.py  ir.py  run_record.py  solution.py  spec.py  validate.py
rastion/hub/: __init__.py  client.py
rastion/ir/: __init__.py  convert.py  detect.py  types.py
rastion/plugins/: __init__.py  discovery.py  registry.py  schema.py
rastion/registry/: __init__.py  base.py  loader.py  manager.py
rastion/registry/problems/: __init__.py
rastion/solvers/: __init__.py  autosolver.py  base.py  baseline.py  discovery.py  highs.py  matching.py  neal.py  ortools_mip.py  qaoa.py  registry.py  schema.py  scip.py  solver_card_template.md  solver_template.py  template.py
rastion/tsp/: __init__.py  arena.py  references.py  tsplib.py  types.py  utils.py
rastion/tui/: __init__.py  benchmark.py  browse.py  controls.py  menu.py  solve.py
scripts/: release_smoke.sh
shareable_maxcut/: metadata.yaml  problem_card.md
shareable_maxcut/instances/: default.json
tests/: test_arena.py  test_autosolver.py  test_baseline_solver.py  test_benchmark_module.py  test_catalog.py  test_examples_validate.py  test_exports.py  test_hub_auth_flow.py  test_hub_config.py  test_info_verbose.py  test_ir.py  test_matching.py  test_plugins.py  test_registry_api.py  test_serialization.py  test_solve_knapsack.py  test_solve_maxcut_neal.py  test_solve_maxcut_qaoa.py  test_tsp.py  test_validation.py
web/: astro.config.mjs  package-lock.json  package.json
web/public/data/: arena.json  benchmarks.json  catalog.json  leaderboards.json  solvers.json  suites.json  tsp_arena.json
web/src/components/: ArenaChart.ts  ArenaLeaderboard.astro  BenchmarkTable.astro  CatalogTable.astro  Footer.astro  Header.astro  LeaderboardsTable.astro  PageIntro.astro  RedirectNotice.astro  SolverTable.astro  SuitesTable.astro  TrustNote.astro  TspMap.ts  dataLoader.ts
web/src/data/: integrations.ts
(+19 files in other folders)
