[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rastion"
version = "0.1.2"
description = "Routing solver hub for Python with executable solver cards, official TSP evals, and replayable TSPLIB demos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "rastion contributors" }]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
ortools = [
  "ortools>=9.9"
]

[project.scripts]
rastion = "rastion.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rastion*"]
exclude = ["tests*", "plugins_local*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
