[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rastion-tsp-ortools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "ortools>=9.9", "rastion"]

[project.entry-points."rastion.solvers"]
tsp_ortools = "rastion_tsp_ortools.solver:get_solver"
